# cpp_python

./: .gitignore  CMakeLists.txt  build.sh  compile_commands2.json  main.cpp  multiply.py
cpp_bindings/: CMakeLists.txt  compile_module.py
embedding/extended/: CMakeLists.txt  call  main.c  main.py
embedding/extended2/: App.cpp  App.hpp  CMakeLists.txt  call  main.cpp  main.py
embedding/extended3/: call  main.cpp
embedding/extended4/: CMakeLists.txt  call  main.cpp
embedding/extended5/: CMakeLists.txt  callback.py  funcs.cpp  funcs.h  main.cpp
embedding/extended_run_code/: call  main.cpp
embedding/high_level/: build.sh  call  main.c
embedding/high_level2/: CMakeLists.txt  build.sh  call  hello.py  main.c
embedding/parse_dictionary/: CMakeLists.txt  call  data.py  defaults.hpp  main.cpp  main.py  notes.txt
lib/: CMakeLists.txt
lib/callbacks/: CMakeLists.txt  calls.cpp
lib/calls/: CMakeLists.txt  calls.cpp  calls.hpp
libs/: CMakeLists.txt
libs/adder/: CMakeLists.txt  adder.cpp  adder.hpp
libs/adder/python_bindings/: adder_python_bindings.cpp  setup.py
libs/adder/python_bindings/adder.egg-info/: PKG-INFO  SOURCES.txt
libs/calls/: CMakeLists.txt  calls.cpp  calls.hpp
libs/calls/python_bindings/: calls_python_bindings.cpp  setup.py
libs/calls/python_bindings/calls.egg-info/: PKG-INFO  SOURCES.txt
libs/randomy/: CMakeLists.txt  printRandom.cpp  randomy.cpp  randomy.hpp
libs/randomy/python_bindings/: randomy_python_bindings.cpp  setup.py
libs/randomy/python_bindings/randomy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
old/: b2.sh  callback_caller.py
python_bindings/: compile_module.py  pycalls.cpp
test/: CMakeLists.txt  main.cpp
